nu mai stiu ce am schimbat

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../styles/signup.css">
+    <link rel="stylesheet" href="../styles/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
     <title>Bug Tracker</title>
 </head>
 <body>
     <div id="header">
-        <h1 id="title">Bug Tracker</h1>
+        <h1 id="title">Bug Tracker - Sign Up</h1>
     </div>
     
     <div id="menu">
-        <div id="button-container">
-            <a href="pages/login.html">
-                <button class="button" type="button" id="login-button"> Login</button>
-            </a>
-            <a href="pages/signup.html">
-                <button class="button" type="button" id="signup-button"> Sign up</button>
-            </a>
+        <div id="forms-container">
+            <form action="../php/login.php" method="post"> <!-- nu exista test.html -->
+                <div class="forms-items">
+                    <input type="text" id="username" name="username" placeholder="Username" value="" class="forms-text-input" required>
+                </div>
+                <div class="forms-items">
+                    <input type="text" id="password" name="password" placeholder="Password" value="" class="forms-text-input" required>
+                </div>
+                <div class="forms-items">
+                    <input type="submit" value="Sign Up" class="button" id="submit-button"> 
+                </div> 
+            </form>
         </div>
     </div>
 
