--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="header">
-        <h1 id="title">Bug Tracker</h1>
+        <h1 id="title">Bug Tracker - Home</h1>
     </div>
     
     <div id="menu">
