--- a/pages/login.html
+++ b/pages/login.html
@@ -11,20 +11,20 @@
 </head>
 <body>
     <div id="header">
-        <h1 id="title">Bug Tracker</h1>
+        <h1 id="title">Bug Tracker - Login</h1>
     </div>
     
     <div id="menu">
         <div id="forms-container">
-            <form action="../test.html" method="post"> <!-- nu exista test.html -->
+            <form action="../php/login.php" method="post"> <!-- nu exista test.html -->
                 <div class="forms-items">
-                    <input type="text" id="username" name="username" placeholder="Username" value="" class="forms-text-input">
+                    <input type="text" id="username" name="username" placeholder="Username" value="" class="forms-text-input" required>
                 </div>
                 <div class="forms-items">
-                    <input type="text" id="password" name="password" placeholder="Password" value="" class="forms-text-input">
+                    <input type="text" id="password" name="password" placeholder="Password" value="" class="forms-text-input" required>
                 </div>
                 <div class="forms-items">
-                    <input type="submit" value="Submit" class="button" id="submit-button"> 
+                    <input type="submit" value="Login" class="button" id="submit-button"> 
                 </div> 
             </form>
         </div>
