added functional logging in and registering

--- a/pages/login.html
+++ b/pages/login.html
@@ -21,7 +21,7 @@
                     <input type="text" id="username" name="username" placeholder="Username" value="" class="forms-text-input" required>
                 </div>
                 <div class="forms-items">
-                    <input type="text" id="password" name="password" placeholder="Password" value="" class="forms-text-input" required>
+                    <input type="password" id="password" name="password" placeholder="Password" value="" class="forms-text-input" required>
                 </div>
                 <div class="forms-items">
                     <input type="submit" value="Login" class="button" id="submit-button"> 
