--- a/pages/register.html
+++ b/pages/register.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../styles/register.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
     <title>Bug Tracker</title>
 </head>
 <body>
     <div id="header">
-        <h1 id="title">Bug Tracker - Sign Up</h1>
+        <h1 id="title">Bug Tracker - Register</h1>
     </div>
     
     <div id="menu">
-        <div id="forms-container">
-            <form action="../php/login.php" method="post"> <!-- nu exista test.html -->
+        <div id="forms-cotainer">
+            <form action="../php/register.php" method="post"> <!-- nu exista test.html -->
                 <div class="forms-items">
                     <input type="text" id="username" name="username" placeholder="Username" value="" class="forms-text-input" required>
                 </div>
                 <div class="forms-items">
-                    <input type="text" id="password" name="password" placeholder="Password" value="" class="forms-text-input" required>
+                    <input type="password" id="password" name="password" placeholder="Password" value="" class="forms-text-input" required>
                 </div>
                 <div class="forms-items">
-                    <input type="submit" value="Sign Up" class="button" id="submit-button"> 
+                    <input type="submit" value="Register" class="button" id="submit-button"> 
                 </div> 
             </form>
         </div>
