--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="pages/login.html">
                 <button class="button" type="button" id="login-button"> Login</button>
             </a>
-            <a href="pages/signup.html">
-                <button class="button" type="button" id="signup-button"> Sign up</button>
+            <a href="pages/register.html">
+                <button class="button" type="button" id="signup-button"> Register</button>
             </a>
         </div>
     </div>
