--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
 
     <title>Bug Tracker</title>
 </head>
 <body>
     <div id="header">
-        <h1 id="title">Bug Tracker - Home</h1>
+        <h1 id="title">Bug Tracker</h1>
     </div>
     
     <div id="menu">
