--- a/pages/home.html
+++ b/pages/home.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+
+    <title>Bug Tracker</title>
 </head>
 <body>
-    Welcome back brother
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+        
+    </main>
 </body>
 </html>
